multiplayer logic and other stuff

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       <p class="subtitle">Persuade, deceive, and debate your way to victory.</p>
     </header>
 
+    <section id="lobby-section">
+      <h2>🛋️ Join a Lobby</h2>
+      <input type="text" id="player-name-input" placeholder="Your Name" />
+      <input type="text" id="lobby-code-input" placeholder="Lobby Code (or leave blank to create)" />
+      <button id="join-lobby-btn">Join Lobby</button>
+      <p id="lobby-status">Enter your name and a lobby code or leave blank to start a new one.</p>
+    </section>
+
     <section id="statement-section">
       <h2>🗣️ Current Statement:</h2>
       <p id="statement">Click “Start Round” to reveal a statement.</p>
